# pulse

./: .gitignore  CMakeLists.txt  test_package_manager.sh
demo_project/: pulse.toml
demo_project/src/: main.pul
docs/: PACKAGE_MANAGER.md  grammar.ebnf
examples/: cli_animation.pul  functional_demo.pul  hello_world.pul  package_manager_demo.pul  working_demo.pul
include/compiler/: compiler.hpp  llvm_backend.hpp
include/lexer/: token.hpp  tokenizer.hpp
include/parser/: ast.hpp  parser.hpp
include/runtime/: runtime.hpp
src/: main.cpp  main.pul
src/compiler/: compiler.cpp
src/lexer/: tokenizer.cpp
src/parser/: ast.cpp  parser.cpp
src/tools/: build_tool.cpp  debugger.cpp  formatter.cpp  package_manager.cpp
